# cassen

./: project
agent/: .env.example  .gitignore  README.md  pyproject.toml  smoke_phase12_real.py
agent/src/cassen_agent/: __init__.py  db.py  graph.py  server.py  settings.py  tools.py
app/: .env.example  .env.local.example  .gitignore  AGENTS.md  next.config.ts  package-lock.json  package.json
app/db/: schema.sql
app/db/migrations/: 001_add_researching_status.sql  001_init.sql
app/src/: middleware.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/actions/: projects.ts
app/src/app/api/agent/runs/[id]/stream/: route.ts
app/src/app/api/chat/: route.ts
app/src/app/projects/: layout.tsx  page.tsx
app/src/app/projects/[id]/: page.tsx
app/src/app/projects/new/: page.tsx
app/src/app/sign-in/[[...sign-in]]/: page.tsx
app/src/app/sign-up/[[...sign-up]]/: page.tsx
app/src/components/: agent-run.tsx  chat-thread.tsx  new-project-form.tsx  project-shell.tsx  project-viewer-lazy.tsx  project-viewer.tsx  projects-sidebar.tsx  site-header.tsx
app/src/lib/: anthropic.ts  projects-types.ts  projects.ts  supabase.ts  utils.ts
cad/: .env.example  .gitignore  README.md  pyproject.toml
cad/src/cassen_cad/: convert.py  rodin.py  sandbox.py  server.py  settings.py
cad/src/cassen_cad/parametric/: __init__.py  base.py  bracket_l.py  enclosure_box.py  mounting_plate.py
cad/tests/: test_sandbox.py
docs/: PRD-v1.md  PRD.md
landing/: .env.local.example  PRD.md  next.config.ts  package-lock.json  package.json
landing/db/: schema.sql
landing/src/: instrumentation-client.ts  middleware.ts
landing/src/app/: layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
landing/src/app/actions/: admin-login.ts  content.ts  signup.ts  upload.ts
landing/src/app/admin/: page.tsx
landing/src/app/admin/content/: page.tsx
landing/src/app/admin/export/: route.ts
landing/src/app/admin/login/: page.tsx
landing/src/app/auth/callback/: route.ts
landing/src/components/: analytics-provider.tsx  cta-banner.tsx  faq.tsx  footer.tsx  founder.tsx  hero.tsx  how-it-works.tsx  signup-form.tsx  signup-success.tsx  use-cases.tsx
landing/src/components/admin/: export-csv-button.tsx  section-form.tsx  sign-out-button.tsx
landing/src/components/admin/sections/: cta-form.tsx  founder-form.tsx  hero-form.tsx  list-form.tsx  meta-form.tsx  signup-form.tsx  welcome-email-form.tsx
landing/src/components/ui/: animated-gradient-text.tsx  dot-pattern.tsx
landing/src/emails/: welcome.ts
landing/src/lib/: analytics.ts  mailer.ts  rate-limit.ts  safe-url.ts  supabase-server.ts  supabase.ts
landing/src/lib/content/: defaults.ts  icons.tsx  server.ts  types.ts
mcp-cad/: .env.example  README.md  pyproject.toml
mcp-cad/src/cassen_cad_mcp/: client.py  config.py  server.py
mcp-electronics/: .env.example  README.md  pyproject.toml
mcp-electronics/data/: parts.json
mcp-electronics/src/cassen_electronics/: aggregator.py  cache.py  config.py  server.py
mcp-electronics/src/cassen_electronics/providers/: base.py  curated.py  digikey.py  mouser.py  nexar.py
mcp-fluids/: .env.example  README.md  pyproject.toml
mcp-fluids/src/cassen_fluids/: catalog.py  config.py  server.py
mcp-fluids/src/cassen_fluids/data/: fittings.json  pumps.json  tubing.json  valves.json
mcp-image-gen/: README.md  package-lock.json  package.json
mcp-image-gen/src/: index.mjs
mcp-mechanical/: README.md  pyproject.toml
mcp-mechanical/src/cassen_mechanical/: catalog.py  server.py
mcp-mechanical/src/cassen_mechanical/data/: bearings.json  extrusion.json  fasteners.json  linear_motion.json  standoffs.json
