[project]
name = "cassen-agent"
version = "0.1.0"
description = "Cassen v1 LangGraph agent service. FastAPI surface; Anthropic + Langfuse + Supabase wired in."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "langgraph>=0.2.55",
    "langchain-anthropic>=0.3",
    "langfuse>=4,<5",
    "supabase>=2.10",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cassen_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
