[project]
name = "cassen-cad"
version = "0.1.0"
description = "Cassen v1 CAD service. STEP -> GLB conversion via cascadio (Open Cascade)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "cascadio>=0.0.16",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "build123d>=0.8",
    "ruff>=0.7",
]

[project.scripts]
cassen-cad = "cassen_cad.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cassen_cad"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
