[project]
name = "cassen-mcp-cad"
version = "0.1.0"
description = "Cassen v1 mechanical knowledge pack — MCP server wrapping cad/'s parametric + script endpoints."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.28",
    "pydantic-settings>=2.6",
]

[project.scripts]
cassen-mcp-cad = "cassen_cad_mcp.server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cassen_cad_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
