[project]
name = "cassen-mcp-electronics"
version = "0.1.0"
description = "Cassen v1 electronics knowledge pack — MCP server exposing parts search/lookup tools."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
]

[project.scripts]
cassen-mcp-electronics = "cassen_electronics.server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cassen_electronics"]

[tool.hatch.build.targets.wheel.force-include]
"data" = "cassen_electronics/data"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
