[project]
name = "cassen-mcp-fluids"
version = "0.1.0"
description = "Cassen v1 fluids knowledge pack — MCP server exposing curated pumps, valves, tubing, and fittings."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "pydantic-settings>=2.6",
]

[project.scripts]
cassen-mcp-fluids = "cassen_fluids.server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cassen_fluids"]

[tool.hatch.build.targets.wheel.force-include]
"src/cassen_fluids/data" = "cassen_fluids/data"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
