[project]
name = "cassen-mcp-mechanical"
version = "0.1.0"
description = "Cassen v1 mechanical knowledge pack — MCP server exposing curated fasteners, bearings, extrusion, and structural hardware."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "pydantic-settings>=2.6",
]

[project.scripts]
cassen-mcp-mechanical = "cassen_mechanical.server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cassen_mechanical"]

[tool.hatch.build.targets.wheel.force-include]
"src/cassen_mechanical/data" = "cassen_mechanical/data"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
